echt begonnen met ohg! laatste content chapter BAM

--- a/case-competition-typology.tex
+++ b/case-competition-typology.tex
@@ -113,7 +113,7 @@ The three cells in the top-right corner, marked in dark gray, are the situations
   \caption{Only external case allowed}
   \begin{tabular}{c|c|c|c}
     \toprule
-    \textsubscript{\ac{int}} \textsuperscript{\ac{ext}}
+    \textsubscript{\tsc{int}} \textsuperscript{\tsc{ext}}
            & [\ac{nom}]
            & [\ac{acc}]
            & [\ac{dat}]
