--- a/the-basic-idea.tex
+++ b/the-basic-idea.tex
@@ -384,7 +384,7 @@ In Figure \ref{fig:nom-nom-intonly}, I give an example in which the relative pro
   \label{fig:nom-nom-intonly}
 \end{figure}
 
-I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
+I draw a dashed circle around each constituent that is structurally a constituent in both the light head and the relative pronoun.
 The light head (the \tsc{nom}P) is a constituent that is structurally contained within the relative pronoun (the \tsc{rel}P), so the light head can be deleted. I illustrate this by marking the content of the dashed circles for the light head gray.
 As the light head is deleted, the headless relative surfaces with the relative pronoun that bears the internal case.
 
@@ -440,7 +440,7 @@ In Figure \ref{fig:nom-acc-intonly}, I give an example in which the relative pro
   \label{fig:nom-acc-intonly}
 \end{figure}
 
-I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
+I draw a dashed circle around each constituent that is structurally a constituent in both the light head and the relative pronoun.
 The light head (the \tsc{nom}P) still is a constituent that is structurally contained within the relative pronoun (the \tsc{rel}P), so the light head can be deleted. I illustrate this by marking the content of the dashed circles for the light head gray.
 As the light head is deleted, the headless relative surfaces with the relative pronoun that bears the internal case.
 
@@ -495,7 +495,7 @@ In Figure \ref{fig:acc-nom-intonly}, I give an example in which the light head b
   \label{fig:acc-nom-intonly}
 \end{figure}
 
-I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
+I draw a dashed circle around each constituent that is structurally a constituent in both the light head and the relative pronoun.
 Different from the examples in Figure \ref{fig:nom-nom-intonly} and \ref{fig:acc-nom-intonly}, the light head does not form a constituent within the relative pronoun.
 The \tsc{nom}P of the light head is a constituent that is structurally contained within the relative pronoun, but the relative pronoun does not contain the feature \tsc{f}2 that forms an \tsc{acc}P.
 The \tsc{nom}P of the relative pronoun is a constituent that is structurally contained within the relative pronoun, but the light head does not contain the feature \tsc{rel} that forms a \tsc{rel}P.
@@ -662,7 +662,7 @@ In Figure \ref{fig:nom-nom-matching}, I give an example in which the light head 
  \label{fig:nom-nom-matching}
 \end{figure}
 
-I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
+I draw a dashed circle around each constituent that is structurally a constituent in both the light head and the relative pronoun.
 In this instance it is no problem that the ϕP has moved over the \tsc{nom}P.
 The light head (the \tsc{nom}P) still is a constituent that is structurally contained within the relative pronoun (the \tsc{rel}P), so the light head can be deleted. I illustrate this by marking the content of the dashed circles for the light head gray.
 As the light head is deleted, the headless relative surfaces with the relative pronoun that bears the internal case.
@@ -734,7 +734,7 @@ In Figure \ref{fig:nom-acc-matching}, I give an example in which the relative pr
  \label{fig:nom-acc-matching}
 \end{figure}
 
-I draw a dashed circle around each constituent that is a constituent in both the light head and the relative pronoun.
+I draw a dashed circle around each constituent that is structurally a constituent in both the light head and the relative pronoun.
 The light head (the \tsc{nom}P) no longer is a constituent that is structurally contained within the relative pronoun (the \tsc{rel}P). Therefore, the light head cannot be deleted, which I illustrate by leaving the content of both dashed circles unfilled.
 As none of the items is deleted, there is no grammatical headless relative possible.
 Figure \ref{fig:nom-acc-matching} shows that in this instance it is a problem the ϕP has moved over the \tsc{nom}P or \tsc{acc}P.
@@ -1002,7 +1002,7 @@ When one of the cases is more complex than the other one, there is no longer a g
 
 \subsection{The unrestricted type}\label{sec:basic-unrestricted}
 
-I end with the unrestricted type of language. I suggest that the light head and the relative pronoun in this type of language have the internal syntax as shown Figure \ref{fig:rel-lh-unres-1}.
+I end with the unrestricted type of language. This type of language has two possible light heads, which are part of the derivation under different circumstances. I suggest that the first possible light head and the relative pronoun in this type of language have the internal syntax as shown Figure \ref{fig:rel-lh-unres-1}.
 
 \begin{figure}[htbp]
   \center
@@ -1154,7 +1154,7 @@ In Figure \ref{fig:acc-nom-syn}, I give the example in which the light head bear
 \end{figure}
 
 The \tsc{acc}P in the light head corresponds to \tit{s}, illustrated by the circle around the \tsc{acc}P and the \tit{s} below it. The \tsc{nom}P in the relative pronoun corresponds to \tit{s} too, illustrated in the same way.
-I draw a dotted circle around each constituent that is a constituent in both the light head and the relative pronoun.
+I draw a dotted circle around each constituent that is formally a constituent in both the light head and the relative pronoun.
 The light head (the \tsc{acc}P realized by \tit{s}) is a constituent that is formally contained within the relative pronoun (the \tsc{nom}P realized by \tit{s}), so the light head is deleted.
 I illustrate this by marking the content of the dotted circle for the light head gray.
 As the light head is deleted, the headless relative surfaces with the relative pronoun that bears the internal case.
@@ -1239,7 +1239,7 @@ In this chapter and in Chapter \ref{ch:deriving-unrestricted} (in which I work o
 
 The light head corresponds to \tit{P}, illustrated by the circle around the \tsc{k}P and the \tit{P} below it. The relative pronoun corresponds to \tit{P} too, illustrated by the circle around the \tsc{rel}P and the \tit{P}. The relative pronoun (the \tsc{rel}P realized by \tit{P}) is a constituent that is formally contained within the light head (the \tsc{k}P realized by \tit{P}), so the relative pronoun can be deleted.
 
-Although in this situation the relative pronoun can be deleted, this does not describe the situation in Old High German, the language I discuss in Chapter \ref{ch:deriving-unrestricted}. In Old High German, the second possible light head contains an additional feature, which I refer to as \tsc{x}.
+Although in this situation the relative pronoun can be deleted, this does not describe the situation in Old High German, the language I discuss in Chapter \ref{ch:deriving-unrestricted}. In Old High German, the second possible light head contains an additional feature, which I refer to as X.
 This is not just a stipulation, but is a reason to think that a second possible light head needs to have a slightly different feature content. This reason has to do with spellout. If two forms contain exactly the same features, it is impossible that they lead to two different syntactic structures. However, this is exactly what I showed in Figure \ref{fig:rel-lh-unres-1} and Figure \ref{fig:rel-lh-unres-mono}: in the former the feature \tsc{rel} gets its own spellout while in the latter \tsc{rel} is spelled out together with the \tsc{k}P. These two structures can never be part of the same language, meaning that Figure \ref{fig:rel-lh-unres-mono} cannot be part of the unrestricted type of language. A possible solution is that the light head has a different feature content, which I argue is the case in Old High German.\footnote{
 There is a second possible solution to solve the problem, which is having two different relative pronouns: in one the feature \tsc{rel} actually corresponds to more than one feature or a different feature.
 }\footnote{
@@ -1259,8 +1259,8 @@ Now consider the second possible light head and the relative pronoun I suggest f
       light head 2 & & relative pronoun \\
       \cmidrule(lr){1-1} \cmidrule(lr){3-3}
       \begin{forest} boom
-      [\tsc{x}P, s sep = 20 mm
-          [\tsc{x}P,
+      [XP, s sep = 20 mm
+          [XP,
           tikz={
           \node[
           draw,circle,
@@ -1293,7 +1293,7 @@ Now consider the second possible light head and the relative pronoun I suggest f
           fit to=tree]{};
           }
               [\tsc{rel}]
-              [\tsc{x}P
+              [XP
                   [\phantom{xxx}, roof, baseline]
               ]
           ]
@@ -1317,22 +1317,22 @@ Now consider the second possible light head and the relative pronoun I suggest f
   \label{fig:rel-lh-unres-2}
 \end{figure}
 
-As discussed, I propose that this light head does not only consist of phi and case features, but that it also contains a feature I here refer to as \tsc{x}. In Chapter \ref{ch:deriving-unrestricted} I motivate this claim and I discuss the content of this feature.
+As discussed, I propose that this light head does not only consist of phi and case features, but that it also contains a feature I here refer to as X. In Chapter \ref{ch:deriving-unrestricted} I motivate this claim and I discuss the content of this feature.
 
 The internal syntax of the light head and the relative pronoun is the consequence of the following lexical entries.
 The light head is spelled out by two lexical entries.
-The feature \tsc{x} is spelled out by its own lexical entry, indicated by the circle around the \tsc{x}P. The rest of the light head is spelled out by the portmanteau of phi and case features.
-The relative pronoun always consists of all features the light head consists of. Therefore, it consists of phi and case features, the feature \tsc{rel} and the feature \tsc{x}.\footnote{
-I actually assume that the relative pronoun that is being compared to the first possible light head also contains the feature \tsc{x}. I left it out of the structures there because it was not relevant for the discussion.
+The feature X is spelled out by its own lexical entry, indicated by the circle around the XP. The rest of the light head is spelled out by the portmanteau of phi and case features.
+The relative pronoun always consists of all features the light head consists of. Therefore, it consists of phi and case features, the feature \tsc{rel} and the feature X.\footnote{
+I actually assume that the relative pronoun that is being compared to the first possible light head also contains the feature X. I left it out of the structures there because it was not relevant for the discussion.
 }
-The phi and case features are spelled out by the same portmanteau as in the light head. The feature \tsc{rel} and the feature \tsc{x} are spelled out by a single lexical entry.
-It is crucial for the analysis that there is a lexical entry for the \tsc{rel}P which contains the feature \tsc{rel} and the \tsc{x}P, but not a more specific one that spells out the \tsc{x}P on its own. In \ref{ex:entry-x}, I give the lexical entry, which spells out as \tit{X}.
+The phi and case features are spelled out by the same portmanteau as in the light head. The feature \tsc{rel} and the feature X are spelled out by a single lexical entry.
+It is crucial for the analysis that there is a lexical entry for the \tsc{rel}P which contains the feature \tsc{rel} and the XP, but not a more specific one that spells out the XP on its own. In \ref{ex:entry-x}, I give the lexical entry, which spells out as \tit{X}.
 
 \ex.\label{ex:entry-x}
 \begin{forest} boom
   [\tsc{rel}P
       [\tsc{rel}]
-      [\tsc{x}P
+      [XP
           [\phantom{xxx}, roof]
       ]
   ]
@@ -1352,7 +1352,7 @@ In Figure \ref{fig:nom-nom-unres}, I give an example in which this can happen. I
       light head 2 & & relative pronoun \\
       \cmidrule(lr){1-1} \cmidrule(lr){3-3}
       \begin{forest} boom
-        [\tsc{x}P, s sep=20mm,
+        [XP, s sep=20mm,
         tikz={
         \node[draw,
         constituent-deletion,yshift=-0.4cm,
@@ -1360,7 +1360,7 @@ In Figure \ref{fig:nom-nom-unres}, I give an example in which this can happen. I
         scale=1.3,
         fit to=tree]{};
         }
-            [\tsc{x}P,
+            [XP,
             tikz={
             \node[label=below:\tit{X},
             draw,circle,
@@ -1402,7 +1402,7 @@ In Figure \ref{fig:nom-nom-unres}, I give an example in which this can happen. I
             fit to=tree]{};
             }
                 [\tsc{rel}]
-                [\tsc{x}P
+                [XP
                     [\phantom{xxx}, roof, baseline]
                 ]
             ]
@@ -1427,10 +1427,10 @@ In Figure \ref{fig:nom-nom-unres}, I give an example in which this can happen. I
   \label{fig:nom-nom-unres}
 \end{figure}
 
-The light head corresponds to \tit{XY}, illustrated by the circle around the \tsc{x}P and the \tit{X} below it and the circle around the \tsc{nom}P and the \tit{Y} below it. The relative pronoun corresponds to \tit{XY} too, illustrated by the circle around the \tsc{rel}P and the \tit{X} below it and the circle around the \tsc{nom}P and the \tit{Y} below it.
-I draw a dotted circle around each constituent that is a constituent in both the light head and the relative pronoun.
-The relative pronoun (the \tsc{rel}P realized by \tit{XY}) is a constituent that is formally contained within the light head (the \tsc{x}P realized by \tit{XY}), so the relative pronoun is deleted.\footnote{
-The same holds the other way around: the light head (the \tsc{x}P realized by \tit{XY}) is a constituent that is formally contained within the relative pronoun (the \tsc{rel}P realized by \tit{XY}). Therefore, either the light head or the relative pronoun can be deleted. I delete the relative pronoun here, as I discuss how it is possible for the relative pronoun to be deleted even though it has a feature less than the light head.
+The light head corresponds to \tit{XY}, illustrated by the circle around the XP and the \tit{X} below it and the circle around the \tsc{nom}P and the \tit{Y} below it. The relative pronoun corresponds to \tit{XY} too, illustrated by the circle around the \tsc{rel}P and the \tit{X} below it and the circle around the \tsc{nom}P and the \tit{Y} below it.
+I draw a dotted circle around each constituent that is formally a constituent in both the light head and the relative pronoun.
+The relative pronoun (the \tsc{rel}P realized by \tit{XY}) is a constituent that is formally contained within the light head (the XP realized by \tit{XY}), so the relative pronoun is deleted.\footnote{
+The same holds the other way around: the light head (the XP realized by \tit{XY}) is a constituent that is formally contained within the relative pronoun (the \tsc{rel}P realized by \tit{XY}). Therefore, either the light head or the relative pronoun can be deleted. I delete the relative pronoun here, as I discuss how it is possible for the relative pronoun to be deleted even though it has a feature less than the light head.
 }
 I illustrate this by marking the content of the dotted circle for the relative pronoun gray.
 
@@ -1445,8 +1445,8 @@ In Figure \ref{fig:acc-nom-unres} I give an example of the second possible light
       light head 2 & & relative pronoun \\
       \cmidrule(lr){1-1} \cmidrule(lr){3-3}
       \begin{forest} boom
-        [\tsc{x}P, s sep=20mm
-            [\tsc{x}P,
+        [XP, s sep=20mm
+            [XP,
             tikz={
             \node[label=below:\tit{X},
             draw,circle,
@@ -1491,7 +1491,7 @@ In Figure \ref{fig:acc-nom-unres} I give an example of the second possible light
             fit to=tree]{};
             }
                 [\tsc{rel}]
-                [\tsc{x}P
+                [XP
                     [\phantom{xxx}, roof, baseline]
                 ]
             ]
@@ -1516,8 +1516,8 @@ In Figure \ref{fig:acc-nom-unres} I give an example of the second possible light
   \label{fig:acc-nom-unres}
 \end{figure}
 
-The light head corresponds to \tit{XZ}, illustrated by the circle around the \tsc{x}P and the \tit{X} below it and the circle around the \tsc{acc}P and the \tit{Z} below it. The relative pronoun corresponds to \tit{XY}, illustrated by the circle around the \tsc{rel}P and the \tit{X} below it and the circle around the \tsc{nom}P and the \tit{Y} below it.
-I draw a dotted circle around each constituent that is a constituent in both the light head and the relative pronoun.
+The light head corresponds to \tit{XZ}, illustrated by the circle around the XP and the \tit{X} below it and the circle around the \tsc{acc}P and the \tit{Z} below it. The relative pronoun corresponds to \tit{XY}, illustrated by the circle around the \tsc{rel}P and the \tit{X} below it and the circle around the \tsc{nom}P and the \tit{Y} below it.
+I draw a dotted circle around each constituent that is formally a constituent in both the light head and the relative pronoun.
 The relative pronoun is no longer a constituent that is formally contained within the light head. Therefore, the relative pronoun cannot be deleted, which I illustrate by leaving the content of both dotted circles unfilled.
 As none of the items is deleted, it is expected that there is no grammatical headless relative possible.
 
@@ -1596,7 +1596,7 @@ Table \ref{tbl:overview-rel-light-ohg-lh2} shows the comparisons between the con
 \label{tbl:overview-rel-light-ohg-lh2}
 \end{table}
 
-Focusing on the second possible light head, languages of the unrestricted type have a lexical entry that spells out phi and case features and a lexical entry that spells out the features X and \tsc{rel} and crucially not a lexical entry that only spells out the feature \tsc{x}.
+Focusing on the second possible light head, languages of the unrestricted type have a lexical entry that spells out phi and case features and a lexical entry that spells out the features X and \tsc{rel} and crucially not a lexical entry that only spells out the feature X.
 Headless relatives in this language are grammatical in all situations: when the internal and the external case match, when the internal case is more complex and when the external case is more complex.
 The second possible light head only derives the correct result for the first and the last situation but not for the second one.
 In the first and last situation, the relative pronoun is (at some point of the derivation) a constituent that is formally contained within the light head, the relative pronoun is deleted, and the light head is the surface pronoun.
