--- a/deriving-internalonly.tex
+++ b/deriving-internalonly.tex
@@ -83,11 +83,11 @@ These lexical entries lead to the grammaticality pattern shown in Table \ref{tbl
     \label{tbl:overview-intonly}
 \end{table}
 
-Consider the first situation in which the internal and the external case match. The light head consists of a phi and case feature portmanteau. The relative pronoun consists of the same morpheme plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is a constituent that is structurally contained within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun that bears the internal case surfaces.
+Consider the first situation in which the internal and the external case match. The light head consists of a phi and case feature portmanteau. The relative pronoun consists of the same morpheme plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is a constituent that is structurally contained within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun surfaces, bearing the internal case.
 
-Consider now the situation in the internal case wins the case competition. The light head consists of a phi and case feature portmanteau. The relative pronoun consists of a phi and case feature portmanteau that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}) plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is a constituent that is structurally contained within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun that bears the internal case surfaces.
+Consider now the situation in the internal case wins the case competition. The light head consists of a phi and case feature portmanteau. The relative pronoun consists of a phi and case feature portmanteau that contains at least one more case feature than the light head (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}) plus an additional morpheme that spells out the feature \tsc{rel}. The lexical entries create a syntactic structure such that the light head is a constituent that is structurally contained within the relative pronoun. Therefore, the light head can be deleted, and the relative pronoun surfaces, bearing the internal case.
 
-Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of a phi and case feature portmanteau and an additional morpheme that spells out the feature \tsc{rel}. Compared to the relative pronoun, the light head lacks the morpheme that spells out \tsc{rel}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is a constituent that is structurally or formally contained within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
+Finally, consider the situation in which the external case wins the case competition. The relative pronoun consists of a phi and case feature portmanteau and an additional morpheme that spells out the feature \tsc{rel}. Compared to the relative pronoun, the light head lacks the morpheme that spells out \tsc{rel}, and it contains at least one more case feature (\tsc{k}\scsub{2} in Figure \ref{tbl:overview-intonly}). The lexical entries create a syntactic structure such that neither the light head nor the relative pronoun is a constituent that is contained within the other element. Therefore, none of the elements can be deleted, and there is no headless relative construction possible.
 
 In Chapter \ref{ch:typology}, I showed that Modern German is a language of the internal-only type. In this chapter, I show that Modern German light heads and relative pronouns have the type of internal syntax described in Figure \ref{fig:rel-lh-intonly-simple}. I give a compact version of the internal syntax of Modern German light heads and relative pronouns in Figure \ref{fig:rel-lh-mg}.
 
@@ -150,7 +150,7 @@ Relative pronouns in Modern German consist of two morphemes: the constituent tha
 Throughout this chapter, I discuss the exact feature content of light heads and relative pronouns, I give lexical entries for them, and I show how these lexical entries lead to the internal syntax of light heads and relative pronoun as shown in Figure \ref{fig:rel-lh-mg}.
 
 The chapter is structured as follows.
-First, I discuss the relative pronoun. I start by decomposing the relative pronoun into the two morphemes I showed in Figure \ref{fig:rel-lh-mg}. Then I show which features each of the morphemes corresponds to. I illustrate how different morphemes are combined into the internal syntax in Figure \ref{fig:rel-lh-mg}.
+First, I discuss the relative pronoun. I start by decomposing it into the two morphemes I showed in Figure \ref{fig:rel-lh-mg}. Then I show which features each of the morphemes corresponds to. I illustrate how different morphemes are combined into the internal syntax in Figure \ref{fig:rel-lh-mg}.
 Then I discuss the light head. I argue that Modern German headless relatives are derived from a type of light-headed relative clause that does not surface in the language. I show that the light head corresponds to one of the morphemes of the relative pronoun (the \tsc{k}P in Figure \ref{fig:rel-lh-mg}).
 Finally, I compare the constituents of the light head and the relative pronoun. I show that the light head can be deleted when the internal case matches the external case or when the internal case is more complex than the external case. When the external case is more complex, I show that none of the elements can be deleted.
 
@@ -344,7 +344,7 @@ Therefore, I propose that actually two pronominal features are present: \tsc{ref
 I assume that clitics lack the features \tsc{ref} (which corresponds to the LP in \pgcitealt{cardinaletti1994}{61}) and the feature Σ. Strong pronouns have, in addition to \tsc{ref} and Σ, another feature (C in terms of \pgcitealt{cardinaletti1994}{61}).
 }
 
-I give the lexical entries for \tit{n} and \tit{m} in \ref{ex:mg-entry-n} and \ref{ex:mg-entry-m}.
+I give the lexical entries for \tit{n} and \tit{m} in \ref{ex:mg-entry-nm}.
 The \tit{n} is the accusative animate singular, so it spells out the features \tsc{ref}, \tsc{cl}, \tsc{an}, \tsc{ind}, \ac{f}1 and \tsc{f}2. The \tit{m} is the dative animate singular, so it spells out the features that the \tit{n} spells out plus \ac{f}3.
 
 \ex.\label{ex:mg-entries-nm}
@@ -625,19 +625,10 @@ In the discussion about Modern German, only the first line leads to successful s
 
 If these two movement operations still do not lead to a successful spellout, there are two more derivational options possible: Backtracking and Spec Formation. I return to these options later in this section, when they are relevant in the derivation of Modern German relative pronouns.
 
-With this background in place, I start constructing the accusative relative pronoun. Starting from the bottom of the functional sequence, the first two features that are merged at \tsc{ref} and \tsc{cl}, creating a \tsc{cl}P.
+With this background in place, I start constructing the accusative relative pronoun. I repeat the available lexical entries in \ref{ex:mg-entries-all-rp}.
 
-\ex.
-\begin{forest} boom
-  [\tsc{cl}P
-       [\tsc{cl}]
-       [\tsc{ref}]
-  ]
-\end{forest}
-
-The syntactic structure forms a constituent in the lexical tree in \ref{ex:mg-entry-n-rep}, repeated from \ref{ex:mg-entry-n}, which corresponds to the \tit{n}.
-
-\ex.
+\ex.\label{ex:mg-entries-all-rp}
+\a.\label{ex:mg-entry-n-rep}
 \begin{forest} boom
   [\tsc{acc}P
       [\tsc{f}2]
@@ -657,9 +648,55 @@ The syntactic structure forms a constituent in the lexical tree in \ref{ex:mg-en
   ]
   {\draw (.east) node[right]{⇔ \tit{n}}; }
 \end{forest}
-\label{ex:mg-entry-n-rep}
+\b.\label{ex:mg-entry-m-rep}
+\begin{forest} boom
+  [\tsc{dat}P
+      [\tsc{f}3]
+      [\tsc{acc}P
+          [\ac{f}2]
+          [\tsc{nom}P
+              [\ac{f}1]
+              [\tsc{ind}P
+                  [\tsc{ind}]
+                  [\tsc{an}P
+                      [\tsc{an}]
+                      [\tsc{cl}P
+                          [\tsc{cl}]
+                          [\tsc{ref}]
+                      ]
+                  ]
+              ]
+          ]
+      ]
+  ]
+  {\draw (.east) node[right]{⇔ \tit{m}}; }
+\end{forest}
+\b.\label{ex:mg-entry-we-rep}
+\begin{forest} boom
+  [\tsc{rel}P
+      [\tsc{rel}]
+      [\tsc{wh}P
+          [\tsc{wh}]
+          [\tsc{ind}P
+              [\tsc{ind}]
+              [\tsc{an}]
+          ]
+      ]
+  ]
+  {\draw (.east) node[right]{⇔ \tit{we}}; }
+\end{forest}
 
-Therefore, the \tsc{cl}P is spelled out as \tit{n}, as shown in \ref{ex:mg-spellout-n-ref-cl}.
+Starting from the bottom of the functional sequence, the first two features that are merged at \tsc{ref} and \tsc{cl}, creating a \tsc{cl}P.
+
+\ex.
+\begin{forest} boom
+  [\tsc{cl}P
+       [\tsc{cl}]
+       [\tsc{ref}]
+  ]
+\end{forest}
+
+The syntactic structure forms a constituent in the lexical tree in \ref{ex:mg-entry-n-rep}. Therefore, the \tsc{cl}P is spelled out as \tit{n}, as shown in \ref{ex:mg-spellout-n-ref-cl}.
 
 \ex.\label{ex:mg-spellout-n-ref-cl}
 \begin{forest} boom
@@ -784,25 +821,7 @@ Therefore, the feature \tsc{wh} combines not only with the feature merged before
   ]
 \end{forest}
 
-This syntactic structure forms a constituent in the lexical tree in \ref{ex:mg-entry-we-rep}, repeated from \ref{ex:mg-entry-we}, which corresponds to the \tit{we}.
-
-\ex.
-\begin{forest} boom
-  [\tsc{rel}P
-      [\tsc{rel}]
-      [\tsc{wh}P
-          [\tsc{wh}]
-          [\tsc{ind}P
-              [\tsc{ind}]
-              [\tsc{an}]
-          ]
-      ]
-  ]
-  {\draw (.east) node[right]{⇔ \tit{we}}; }
-  \label{ex:mg-entry-we-rep}
-\end{forest}
-
-Therefore, the \tsc{wh}P is spelled out as \tit{we}, as shown in \ref{ex:mg-spellout-whp-ind}.
+This syntactic structure forms a constituent in the lexical tree in \ref{ex:mg-entry-we-rep}. Therefore, the \tsc{wh}P is spelled out as \tit{we}, as shown in \ref{ex:mg-spellout-whp-ind}.
 
 \ex.\label{ex:mg-spellout-whp-ind}
 \begin{forest} boom
@@ -1113,32 +1132,7 @@ For the dative relative pronoun, one more feature is merged: the \tsc{f}3. The d
 This structure does not form a constituent in any of the lexical trees in the language's lexicon, and neither of the spellout driven movements leads to a successful spellout.
 Backtracking leads to splitting up the \tsc{rel}P from the \tsc{acc}P.
 The feature \tsc{f}3 is merged in both workspaces, so with the \tsc{rel}P and and with the \tsc{acc}P. The spellout of \tsc{f}3 is successful when it is combined with the \tsc{acc}P.
-It namely forms a constituent in the lexical tree in \ref{ex:mg-entry-m-rep}, repeated from \ref{ex:mg-entry-m}, which corresponds to the \tit{m}.
-
-\ex.\label{ex:mg-entry-m-rep}
-\begin{forest} boom
-  [\tsc{dat}P
-      [\tsc{f}3]
-      [\tsc{acc}P
-          [\ac{f}2]
-          [\tsc{nom}P
-              [\ac{f}1]
-              [\tsc{ind}P
-                  [\tsc{ind}]
-                  [\tsc{an}P
-                      [\tsc{an}]
-                      [\tsc{cl}P
-                          [\tsc{cl}]
-                          [\tsc{ref}]
-                      ]
-                  ]
-              ]
-          ]
-      ]
-  ]
-  {\draw (.east) node[right]{⇔ \tit{m}}; }
-\end{forest}
-
+It namely forms a constituent in the lexical tree in \ref{ex:mg-entry-m-rep}.
 The \tsc{dat}P is spelled out as \tit{m}, and all constituents are merged back into the existing syntactic structure, as shown in \ref{ex:mg-spellout-rel-dat}.
 
 \ex.\label{ex:mg-spellout-rel-dat}
@@ -1191,7 +1185,7 @@ The \tsc{dat}P is spelled out as \tit{m}, and all constituents are merged back i
 \end{forest}
 \end{adjustbox}
 
-To summarize, I decomposed the relative pronoun into the two morphemes \tit{we} and the final consonant (\tit{n} and \tit{m}). I showed which features each of the morphemes spells out and what the internal syntax looks like that they are combined into. It is this internal syntax that determines whether the light head can be deleted or not.
+To summarize, I decomposed the relative pronoun into the two morphemes: \tit{we} and the final consonant (\tit{n} and \tit{m}). I showed which features each of the morphemes spells out and what the internal syntax looks like that they are combined into. It is this internal syntax that determines whether the light head can be deleted or not.
 
 \section{The Modern German (extra) light head}\label{sec:light-mg}
 
@@ -1213,7 +1207,7 @@ I have suggested that headless relatives are derived from light-headed relatives
   ]
 \end{forest}
 
-In Chapter \ref{ch:the-basic-idea}, I suggested that light heads consist of at least two features: ϕ and \tsc{k}
+In Chapter \ref{ch:the-basic-idea}, I suggested that light heads consist of at least two features: ϕ and \tsc{k}.
 In this section, I determine the exact feature content of the light head.
 I end up claiming that the phi and case feature portmanteau of the relative pronoun is the light head in headless relatives. I show the complete structure that I work towards in this section in \ref{ex:mg-lh}.
 
@@ -1404,9 +1398,9 @@ In Chapter \ref{ch:the-basic-idea}, I suggested that the relative pronoun contai
 
 It contains the pronominal feature \tsc{ref}, the gender features \tsc{cl} and \tsc{an}, the number feature \tsc{ind} and case features \tsc{k}.
 
-I introduced the lexical entries that are required to spell out these features in Section \ref{sec:mg-rel}. I repeat them from \ref{ex:mg-entries-nm} in \ref{ex:mg-entries-nm-rep}.
+I introduced the lexical entries that are required to spell out these features in Section \ref{sec:mg-rel}. I repeat them in \ref{ex:mg-entries-all-lh}.
 
-\ex.\label{ex:mg-entries-nm-rep}
+\ex.\label{ex:mg-entries-all-lh}
 \a.\label{ex:mg-entry-n-rep1}
  \begin{forest} boom
    [\tsc{acc}P
@@ -1524,8 +1518,7 @@ fit to=tree]{};
 ]
 \end{forest}
 
-
-In sum, Modern German headless relatives are derived from a the light-headed relative with an extra light head. This extra light head is spelled out by single phi and case feature portmanteau. The lexical entries used to spell this light head out are also used to spell out part of the internal syntax of the relative clause.
+In sum, Modern German headless relatives are derived from a the light-headed relative with an extra light head. This extra light head is spelled out by a single phi and case feature portmanteau. The lexical entries used to spell this light head out are also used to spell out part of the internal syntax of the relative clause.
 
 % At first sight it seems like \citet{fuss2014} discuss a exception to this claim, namely headless relatives with \tsc{d}-pronouns. However, they claim that these headless relatives are actually light-headed relatives in which one of two syncretic elements is deleted by haplology.
 
@@ -1539,7 +1532,8 @@ I start with an example with matching cases, in which the internal and the exter
 Then I give an example in which the internal dative case is more complex than the external accusative case.
 I end with an example in which the external dative case is more complex than the internal accusative case.
 I show that the first two examples are grammatical and the last one is not. I derive this by showing that only in the first two situations the light head is a constituent that is structurally contained within the relative pronoun, and that it can therefore then be deleted.
-In the last example, neither the light head nor the relative pronoun is a constituent that is structurally or formally contained in the other element.
+In the last example, neither the light head nor the relative pronoun is a constituent that is structurally contained in the other element.
+I do not discuss formal constituent containment in this chapter, because it never leads to a successful deletion when structural constituent containment does not.
 
 I start with the situation in which the cases match.
 Consider the example in \ref{ex:mg-acc-acc-rep}, in which the internal accusative case competes against the external accusative case. The relative clause is marked in bold.
@@ -1589,7 +1583,7 @@ In Figure \ref{fig:mg-int=ext}, I give the syntactic structure of the extra ligh
           \begin{forest} boom
           [\tsc{rel}P
               [\tsc{rel}P
-                  [\phantom{x}\tit{w}\phantom{x}, roof]
+                  [\phantom{x}\tit{we}\phantom{x}, roof]
               ]
               [\tsc{acc}P,
               tikz={
@@ -1622,8 +1616,8 @@ In Figure \ref{fig:mg-int=ext}, I give the syntactic structure of the extra ligh
 
 The relative pronoun consists of two morphemes: \tit{we} and \tit{n}.
 The extra light head consists of a single morpheme: \tit{n}.
-As usual, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology below it, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
-I draw a dashed circle around each constituent that is a constituent in both the extra light head and the relative pronoun.
+As usual, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
+I draw a dashed circle around each constituent that is a structurally constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of a single constituent: the \tsc{acc}P.
 This \tsc{acc}P is a constituent that is structurally contained within the relative pronoun. Therefore, the extra light head can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
@@ -1678,7 +1672,7 @@ In Figure \ref{fig:mg-int-wins}, I give the syntactic structure of the extra lig
           \begin{forest} boom
             [\tsc{rel}P
                 [\tsc{rel}P
-                    [\phantom{x}\tit{w}\phantom{x}, roof]
+                    [\phantom{x}\tit{we}\phantom{x}, roof]
                 ]
                 [\tsc{dat}P,
                 tikz={
@@ -1716,8 +1710,8 @@ In Figure \ref{fig:mg-int-wins}, I give the syntactic structure of the extra lig
 
 The relative pronoun consists of two morphemes: \tit{we} and \tit{m}.
 The extra light head consists of a single morpheme: \tit{n}.
-Again, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology below it, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
-I draw a dashed circle around each constituent that is a constituent in both the extra light head and the relative pronoun.
+Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
+I draw a dashed circle around each constituent that is structurally a constituent in both the extra light head and the relative pronoun.
 
 The extra light head consists of a single constituent: the \tsc{acc}P.
 This \tsc{acc}P is a constituent that is structurally contained within the relative pronoun. Therefore, the extra light can be deleted. I signal the deletion of the extra light head by marking the content of its circle gray.
@@ -1782,7 +1776,7 @@ In Figure \ref{fig:mg-ext-wins}, I give the syntactic structure of the extra lig
           \begin{forest} boom
             [\tsc{rel}P
                 [\tsc{rel}P
-                    [\phantom{x}\tit{w}\phantom{x}, roof]
+                    [\phantom{x}\tit{we}\phantom{x}, roof]
                 ]
                 [\tsc{acc}P,
                 tikz={
@@ -1815,12 +1809,14 @@ In Figure \ref{fig:mg-ext-wins}, I give the syntactic structure of the extra lig
 
 The relative pronoun consists of two morphemes: \tit{we} and \tit{n}.
 The extra light head consists of a single morpheme: \tit{m}.
-Again, I circle the part of the structure that corresponds to a particular lexical entry, and I place the corresponding phonology below it, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
-I draw a dashed circle around each constituent that is a constituent in both the extra light head and the relative pronoun.
+Again, I circle the part of the structure that corresponds to a particular lexical entry, or I reduce the structure to a triangle, and I place the corresponding phonology below it.
+I draw a dashed circle around each constituent that is structurally a constituent in both the extra light head and the relative pronoun.
 
+In this case, the light head is not a constituent that is structurally contained within the relative pronoun.
 The extra light head consists of a single constituent: the \tsc{dat}P.
-In this case, the light head is not a constituent that is structurally or formally contained within the relative pronoun. The relative pronoun only contains the \tsc{acc}P, and it lacks the \tsc{f}3 that makes a \tsc{dat}P. Since the weaker feature containment requirement is not met, the stronger constituent containment requirement cannot be met either. The form of the light head (\tit{n}) is also not contained within the form of the relative pronoun (\tit{wem}).
-The relative pronoun is not a constituent that is structurally or formally contained within the light head. It namely lacks the complete constituent and \tsc{rel}P. The form of the light head (\tit{wem}) is also not contained within the form of the relative pronoun (\tit{n}).
+The relative pronoun only contains the \tsc{acc}P, and it lacks the \tsc{f}3 that makes a \tsc{dat}P. Since the weaker feature containment requirement is not met, the stronger constituent containment requirement cannot be met either.
+
+The relative pronoun is not a constituent that is structurally contained within the light head. It namely lacks the complete constituent and \tsc{rel}P.
 Therefore, the extra light cannot be deleted, and the relative pronoun cannot be deleted either.
 As a result, there is no grammatical headless relative possible.
 
@@ -1882,6 +1878,6 @@ I derive this from the internal syntax of light heads and relative pronouns in M
   \label{fig:rel-lh-mg-sum}
 \end{figure}
 
-A crucial characteristic of internal-only languages such as Modern German is that they have a portmanteau for phi and case features. Therefore, the light head is a constituent that is structurally contained within the relative pronoun when the internal and the external case match and when the internal case is the more complex one. As a result, the light head can be deleted, and the relative pronoun can surface, bearing the internal case.
+A crucial characteristic of internal-only languages such as Modern German is that they have a portmanteau for phi and case features. Therefore, the light head is a constituent that is contained within the relative pronoun when the internal and the external case match and when the internal case is the more complex one. As a result, the light head can be deleted, and the relative pronoun can surface, bearing the internal case.
 
-When the internal case is the more complex one, neither the light head nor the relative pronoun is a constituent that is structurally or formally contained within the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
+When the internal case is the more complex one, neither the light head nor the relative pronoun is a constituent that is structurally contained within the other element. None of the elements can be deleted, and there is no grammatical headless relative possible.
